--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,12 @@
 {
-  "recommendations": ["Vue.volar"]
+  "recommendations": [
+    "octref.vetur",
+    "dbaeumer.vscode-eslint",
+    "stylelint.vscode-stylelint",
+    "esbenp.prettier-vscode",
+    "mrmlnc.vscode-less",
+    "lokalise.i18n-ally",
+    "mikestead.dotenv",
+    "heybourn.headwind"
+  ]
 }
